# gst-meta-example

./: CMakeLists.txt
src/: gstexamplemeta.c  gstexamplemeta.h
